--- a/public/index.html
+++ b/public/index.html
@@ -60,30 +60,9 @@
 </div>
 </div>
 
-                <div class="fold">
-    <div class="latest-badge">
-        <img src="/assets/latest-badge.svg" alt="latest projects badge">
-    </div>
-    <div class="fold-links">
-        <div class="two-col-grid">
-            <div class="fold-grid-cell">
-                <h2>Start the <br> Conversation:</h2>
-                <img src="/assets/whatsapp-icon.svg" alt="WhatsApp Icon">
-            </div>
-            <div class="fold-grid-cell">
-                <h2>Check out all <br>of my work:</h2>
-                <img src="/assets/dribbble-icon.svg" alt="WhatsApp Icon">
-            </div>
-        </div>
-    </div>
-</div>
                 <div class="page-break"></div>
-                
-<div class="overview">
-    <div class="section-title">Why you should choose
-        <span>Curtis Brighton?</span>
-    </div>
-    <div class="sub-heading">I don’t touch template
+                <div class="overview">
+    <div class="section-title">Why you should choose Curtis Brighton?
     </div>
     <p>
         My service is designed to offer a streamlined, efficient, and cost-effective solution for individuals, startups, and
@@ -91,33 +70,33 @@
         delivery, this package lays the foundation for a professional and responsive website that not only attracts visitors but
         also effectively communicates your brand message.
     </p>
-    <div class="overview-grid">
-        <div class="overview-grid-cell">
-            <div id="lottie-animation1" class="lottie-container"></div>
-            <div class="overview-title">Affordable Hosting</div>
-            <p>Choose from our reliable and secure hosting plans to keep your website up and running smoothly.</p>
-        </div>
-        <div class="overview-grid-cell">
-            <div id="lottie-animation4" class="lottie-container"></div>
-            <div class="overview-title">Custom Websites</div>
-            <p>Stand out with a unique, professionally designed website that reflects your brand identity.</p>
-        </div>
-        <div class="overview-grid-cell">
-            <div id="lottie-animation3" class="lottie-container"></div>
-            <div class="overview-title">Full Ownership</div>
-            <p>Enjoy complete ownership of your website's source code and design.</p>
-        </div>
-        <div class="overview-grid-cell">
-            <div id="lottie-animation2" class="lottie-container"></div>
-            <div class="overview-title">Easy-to-Use CMS</div>
-            <p>Manage your content effortlessly with our user-friendly content management system.</p>
-        </div>
+</div>
+                <div class="page-break"></div>
+                <div class="text-banner">
+    Take control of your site!
+</div>
+<div class="overview-grid">
+    <div class="overview-grid-cell">
+        <div id="lottie-animation1" class="lottie-container"></div>
+        <div class="overview-title">Affordable Hosting</div>
+        <p>Choose from our reliable and secure hosting plans to keep your website up and running smoothly.</p>
     </div>
-    <div class="text-banner">
-        Take control of your site!
+    <div class="overview-grid-cell">
+        <div id="lottie-animation4" class="lottie-container"></div>
+        <div class="overview-title">Custom Websites</div>
+        <p>Stand out with a unique, professionally designed website that reflects your brand identity.</p>
+    </div>
+    <div class="overview-grid-cell">
+        <div id="lottie-animation3" class="lottie-container"></div>
+        <div class="overview-title">Full Ownership</div>
+        <p>Enjoy complete ownership of your website's source code and design.</p>
+    </div>
+    <div class="overview-grid-cell">
+        <div id="lottie-animation2" class="lottie-container"></div>
+        <div class="overview-title">Easy-to-Use CMS</div>
+        <p>Manage your content effortlessly with our user-friendly content management system.</p>
     </div>
 </div>
-
 <script>
     // Load the first animation
     lottie.loadAnimation({
@@ -153,25 +132,22 @@
     });
 </script>
                 <div class="page-break"></div>
-                 <section class="header-snapshot">
-        <div class="tag">Website Development</div>
+                 
+ <div class="overview">
+ <section class="header-snapshot">
         <h1>If you can think it, <br> I can build it.</h1>
-        <p>You get high-quality work backed by unlimited edits.</p>
     </section>
 
     <section class="services-snapshot">
         <div class="service-box">
-            <img src="/assets/svg/new-svg.svg" alt="New Icon">
             <h2>New Sites.</h2>
             <p class="p-center">Build Webflow pages or sites from your designs on Figma and more.</p>
         </div>
         <div class="service-box">
-            <img src="/assets/svg/convert-svg.svg" alt="Convert Icon">
             <h2>Convert.</h2>
             <p class="p-center">Get your existing site on Webflow. Go from Static to Dynamic.</p>
         </div>
         <div class="service-box">
-            <img src="/assets/svg/emulate-svg.svg" alt="Emulate Icon">
             <h2>Emulate.</h2>
             <p class="p-center">Get that template you like built in Webflow.</p>
         </div>
@@ -183,6 +159,7 @@
             <p>Get exactly what you want, not close enough.</p>
         </div>
     </section>
+    </div>
                 <div class="page-break"></div>
                 <div class="service-philosophy">
     <div class="icon-header">
