--- a/public/index.html
+++ b/public/index.html
@@ -161,14 +161,15 @@
     </section>
     </div>
                 <div class="page-break"></div>
-                <div class="service-philosophy">
+                <div class="overview">
+<div class="service-philosophy">
     <div class="icon-header">
-        <img src="/assets/svg/yingyang.svg" alt="Ying Yang Icon">
-        <h2>Service <br>Philosophy</h2>
+        <h2>Service Philosophy</h2>
     </div>
     <p>My website service is crafted to evolve alongside your growth. Starting with a fully responsive, easy-to-manage site built by me, you can launch your online presence efficiently and affordably. From just $200, the Stock Option sets you up with a solid foundation, ready in just 5 days.
     <br><br>
     As your needs expand, so does the potential of your website. Building with me grants you full access to an Upgrades Menu, allowing your site to evolve and adapt, ensuring it always meets your growing requirements.</p>
+</div>
 </div>
                 <div class="page-break"></div>
                 <div class="features-section">
