--- a/public/index.html
+++ b/public/index.html
@@ -161,18 +161,22 @@
     </section>
     </div>
                 <div class="page-break"></div>
-                <div class="overview">
-<div class="service-philosophy">
-    <div class="icon-header">
-        <h2>Service Philosophy</h2>
-    </div>
-    <p>My website service is crafted to evolve alongside your growth. Starting with a fully responsive, easy-to-manage site built by me, you can launch your online presence efficiently and affordably. From just $200, the Stock Option sets you up with a solid foundation, ready in just 5 days.
-    <br><br>
-    As your needs expand, so does the potential of your website. Building with me grants you full access to an Upgrades Menu, allowing your site to evolve and adapt, ensuring it always meets your growing requirements.</p>
-</div>
-</div>
+                <section class="service-philosophy">
+    <div class="content-container">
+        <div class="section-title">
+            <h2>Service Philosophy</h2>
+        </div>
+        <p>My website service is crafted to evolve alongside your growth. Starting with a fully responsive, easy-to-manage site
+            built by me, you can launch your online presence efficiently and affordably. From just $200, the Stock Option sets you
+            up with a solid foundation, ready in just 5 days.
+            <br>
+                <br>
+                    As your needs expand, so does the potential of your website. Building with me grants you full access to an Upgrades
+                    Menu, allowing your site to evolve and adapt, ensuring it always meets your growing requirements.</p>
+            </div>
+        </section>
                 <div class="page-break"></div>
-                <div class="features-section">
+                <section class="features-section">
     <h2>Features</h2>
     <div class="features-grid">
         <div class="feature-grid-cell red-cell" >
@@ -206,7 +210,7 @@
             <p>Easily manage, update, and organize your content with a user-friendly CMS.</p>
         </div>
     </div>
-</div>
+</section>
                 <div class="page-break"></div>
                 <div class="how-it-works-section">
     <h2>How it works</h2>
