--- a/public/index.html
+++ b/public/index.html
@@ -177,43 +177,50 @@
         </section>
                 <div class="page-break"></div>
                 <section class="features-section">
-    <h2>Features</h2>
-    <div class="features-grid">
-        <div class="feature-grid-cell red-cell" >
-            <img src="/assets/svg/fast-svg.svg" alt="Fast Delivery Icon">
-            <h3>Fast<br>Delivery</h3>
-            <p>Receive your custom website in as little as 7 days.</p>
+    <div class="overview">
+        <div class="section-title">
+            <h2>Features</h2>
         </div>
-        <div class="feature-grid-cell yellow-cell">
-            <img src="/assets/svg/revision-svg.svg" alt="Revision Icon">
-            <h3>Unlimted<br>Revisions</h3>
-            <p>I'll refine your design until it's exactly what you envisioned.</p>
-        </div>
-        <div class="feature-grid-cell red-cell">
-            <img src="/assets/svg/your-svg.svg" alt="Ownership Icon">
-            <h3>Unique and<br>Yours</h3>
-            <p>Every site is tailor-made and fully owned by you.</p>
-        </div>
-        <div class="feature-grid-cell yellow-cell">
-            <img src="/assets/svg/design-svg.svg" alt="Design Icon">
-            <h3>Responsive<br>Design</h3>
-            <p>Websites that look good on all devices—whether desktop, tablet, or mobile.</p>
-        </div>
-        <div class="feature-grid-cell red-cell">
-            <img src="/assets/svg/email-svg.svg" alt="Emal Collection Icon">
-            <h3>Email<br>Collection</h3>
-            <p>Effortlessly gather and organize your email signups.</p>
-        </div>
-        <div class="feature-grid-cell yellow-cell">
-            <img src="/assets/svg/content-svg.svg" alt="CMS Icon">
-            <h3>Easy Content<br>Management</h3>
-            <p>Easily manage, update, and organize your content with a user-friendly CMS.</p>
+        <div class="features-grid">
+            <div class="feature-grid-cell">
+                <img src="/assets/svg/fast-svg.svg" alt="Fast Delivery Icon">
+                <h3>Fast<br>Delivery</h3>
+                <p>Receive your custom website in as little as 7 days.</p>
+            </div>
+            <div class="feature-grid-cell yellow-cell">
+                <img src="/assets/svg/revision-svg.svg" alt="Revision Icon">
+                <h3>Unlimted<br>Revisions</h3>
+                <p>I'll refine your design until it's exactly what you envisioned.</p>
+            </div>
+            <div class="feature-grid-cell red-cell">
+                <img src="/assets/svg/your-svg.svg" alt="Ownership Icon">
+                <h3>Unique and<br>Yours</h3>
+                <p>Every site is tailor-made and fully owned by you.</p>
+            </div>
+            <div class="feature-grid-cell yellow-cell">
+                <img src="/assets/svg/design-svg.svg" alt="Design Icon">
+                <h3>Responsive<br>Design</h3>
+                <p>Websites that look good on all devices—whether desktop, tablet, or mobile.</p>
+            </div>
+            <div class="feature-grid-cell red-cell">
+                <img src="/assets/svg/email-svg.svg" alt="Emal Collection Icon">
+                <h3>Email<br>Collection</h3>
+                <p>Effortlessly gather and organize your email signups.</p>
+            </div>
+            <div class="feature-grid-cell yellow-cell">
+                <img src="/assets/svg/content-svg.svg" alt="CMS Icon">
+                <h3>Easy Content<br>Management</h3>
+                <p>Easily manage, update, and organize your content with a user-friendly CMS.</p>
+            </div>
         </div>
     </div>
 </section>
                 <div class="page-break"></div>
-                <div class="how-it-works-section">
+                <section class="how-it-works-section">
+    <div class="overview">
+        <div class="section-title">
     <h2>How it works</h2>
+    </div>
     <div class="how-grid">
         <div class="how-grid-cell">
             <div class="faq-container">
@@ -284,9 +291,11 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                        </div>
+                                    </section>
                 <div class="page-break"></div>
-                <div class="price-section">
+                <section class="price-section">
+    <div class="overview">
     <div class="price-grid">
         <div class="package-cell">
             <div class="price-title">Classic Website Package</div>
@@ -360,10 +369,15 @@
                                 <div class="price-questions">
                                     Still Have Questions?
                                 </div>
-                            </div>
+                                </div>
+                            </section>
                             
                 <div class="page-break"></div>
-                <h2>FAQs</h2>
+                <section class="faq-section">
+    <div class="overview">
+        <div class="section-title">
+<h2>FAQs</h2>
+</div>
 <div class="faq-container">
     <div class="faq-item">
         <input type="checkbox" id="faq5">
@@ -420,10 +434,15 @@
                         </div>
                     </div>
                 </div>
+                </div>
+                </section>
 
                 <div class="page-break"></div>
                     <section class="container">
+        <div class="overview">
+            <div class="section-title">
         <h1>LETS DISCUSS YOUR NEXT SITE</h1>
+        </div>
 
         <div class="content">
             <!-- Contact Form -->
@@ -467,6 +486,7 @@
                     <p>Book a Call</p>
                 </div>
             </div>
+        </div>
         </div>
     </section>
                 <div class="page-break"></div>
