--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
                     <nav class="navbar">
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#overview">Overview</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
@@ -60,43 +60,47 @@
 </div>
 </div>
 
-                <div class="page-break"></div>
-                <div class="overview">
-    <div class="section-title">Why you should choose Curtis Brighton?
+                    <div class="page-break"></div>
+                <section id="overview" class="overview">
+    <div class="content-background">
+        <div class="section-title">Why you should choose Curtis Brighton?
+        </div>
+        <p>
+            My service is designed to offer a streamlined, efficient, and cost-effective solution for individuals, startups, and
+            small businesses looking to establish a strong online presence. With a focus on functionality, aesthetics, and rapid
+            delivery, this package lays the foundation for a professional and responsive website that not only attracts visitors but
+            also effectively communicates your brand message.
+        </p>
     </div>
-    <p>
-        My service is designed to offer a streamlined, efficient, and cost-effective solution for individuals, startups, and
-        small businesses looking to establish a strong online presence. With a focus on functionality, aesthetics, and rapid
-        delivery, this package lays the foundation for a professional and responsive website that not only attracts visitors but
-        also effectively communicates your brand message.
-    </p>
-</div>
-                <div class="page-break"></div>
-                <div class="text-banner">
+</section>
+                    <div class="page-break"></div>
+                <section id="benefits" class="benefits">
+<div class="text-banner">
     Take control of your site!
 </div>
-<div class="overview-grid">
+<div class="grid-four-col">
     <div class="overview-grid-cell">
         <div id="lottie-animation1" class="lottie-container"></div>
-        <div class="overview-title">Affordable Hosting</div>
-        <p>Choose from our reliable and secure hosting plans to keep your website up and running smoothly.</p>
+        <div class="sub-title">Affordable Hosting</div>
+        <p class="text-background">Choose from our reliable and secure hosting plans to keep your website up and running smoothly.</p>
     </div>
     <div class="overview-grid-cell">
         <div id="lottie-animation4" class="lottie-container"></div>
-        <div class="overview-title">Custom Websites</div>
-        <p>Stand out with a unique, professionally designed website that reflects your brand identity.</p>
+        <div class="sub-title">Custom Websites</div>
+        <p class="text-background">Stand out with a unique, professionally designed website that reflects your brand identity.</p>
     </div>
     <div class="overview-grid-cell">
         <div id="lottie-animation3" class="lottie-container"></div>
-        <div class="overview-title">Full Ownership</div>
-        <p>Enjoy complete ownership of your website's source code and design.</p>
+        <div class="sub-title">Full Ownership</div>
+        <p class="text-background">Enjoy complete ownership of your website's source code and design.</p>
     </div>
     <div class="overview-grid-cell">
         <div id="lottie-animation2" class="lottie-container"></div>
-        <div class="overview-title">Easy-to-Use CMS</div>
-        <p>Manage your content effortlessly with our user-friendly content management system.</p>
+        <div class="sub-title">Easy-to-Use CMS</div>
+        <p class="text-background">Manage your content effortlessly with our user-friendly content management system.</p>
     </div>
 </div>
+</section>
 <script>
     // Load the first animation
     lottie.loadAnimation({
@@ -131,7 +135,7 @@
         path: 'lottie/animation4.json' // path to the third animation JSON file
     });
 </script>
-                <div class="page-break"></div>
+                    <div class="page-break"></div>
                  
  <div class="overview">
  <section class="header-snapshot">
@@ -160,7 +164,7 @@
         </div>
     </section>
     </div>
-                <div class="page-break"></div>
+                    <div class="page-break"></div>
                 <section class="service-philosophy">
     <div class="content-container">
         <div class="section-title">
@@ -175,7 +179,7 @@
                     Menu, allowing your site to evolve and adapt, ensuring it always meets your growing requirements.</p>
             </div>
         </section>
-                <div class="page-break"></div>
+                    <div class="page-break"></div>
                 <section class="features-section">
     <div class="overview">
         <div class="section-title">
@@ -215,7 +219,7 @@
         </div>
     </div>
 </section>
-                <div class="page-break"></div>
+                    <div class="page-break"></div>
                 <section class="how-it-works-section">
     <div class="overview">
         <div class="section-title">
@@ -293,7 +297,7 @@
                                         </div>
                                         </div>
                                     </section>
-                <div class="page-break"></div>
+                    <div class="page-break"></div>
                 <section class="price-section">
     <div class="overview">
     <div class="price-grid">
@@ -372,7 +376,7 @@
                                 </div>
                             </section>
                             
-                <div class="page-break"></div>
+                    <div class="page-break"></div>
                 <section class="faq-section">
     <div class="overview">
         <div class="section-title">
@@ -437,7 +441,7 @@
                 </div>
                 </section>
 
-                <div class="page-break"></div>
+                    <div class="page-break"></div>
                     <section class="container">
         <div class="overview">
             <div class="section-title">
@@ -489,7 +493,7 @@
         </div>
         </div>
     </section>
-                <div class="page-break"></div>
+                    <div class="page-break"></div>
                 <!-- Footer -->
 <footer class="footer">
     <div class="footer-container">
