--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <title>Home Page</title>
         <link rel="stylesheet" href="/style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.4/lottie.min.js"></script>
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <div class="page">
