--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home Page</title>
+        <title>Website By Curtis</title>
         <link rel="stylesheet" href="/style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.4/lottie.min.js"></script>
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/assets/coffee-cup.svg" type="image/x-icon">
     </head>
     <body>
         <div class="page">
@@ -15,7 +15,7 @@
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#overview">Overview</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="#benefits">Benefits</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
         <div class="hamburger">
@@ -76,31 +76,32 @@
 </section>
                     <div class="page-break"></div>
                 <section id="benefits" class="benefits">
-<div class="text-banner">
-    Take control of your site!
-</div>
-<div class="grid-four-col">
-    <div class="overview-grid-cell">
-        <div id="lottie-animation1" class="lottie-container"></div>
-        <div class="sub-title">Affordable Hosting</div>
-        <p class="text-background">Choose from our reliable and secure hosting plans to keep your website up and running smoothly.</p>
+    <div class="text-banner">
+        Take control of your site!
     </div>
-    <div class="overview-grid-cell">
-        <div id="lottie-animation4" class="lottie-container"></div>
-        <div class="sub-title">Custom Websites</div>
-        <p class="text-background">Stand out with a unique, professionally designed website that reflects your brand identity.</p>
+    <div class="grid-four-col">
+        <div class="overview-grid-cell">
+            <div id="lottie-animation1" class="lottie-container"></div>
+            <div class="sub-title">Affordable Hosting</div>
+            <p class="text-background">Choose from our reliable and secure hosting plans to keep your website up and running
+                smoothly.</p>
+        </div>
+        <div class="overview-grid-cell">
+            <div id="lottie-animation4" class="lottie-container"></div>
+            <div class="sub-title">Custom Websites</div>
+            <p class="text-background">Stand out with a unique, professionally designed website that reflects your brand identity.</p>
+        </div>
+        <div class="overview-grid-cell">
+            <div id="lottie-animation3" class="lottie-container"></div>
+            <div class="sub-title">Full Ownership</div>
+            <p class="text-background">Enjoy complete ownership of your website's source code and design.</p>
+        </div>
+        <div class="overview-grid-cell">
+            <div id="lottie-animation2" class="lottie-container"></div>
+            <div class="sub-title">Easy-to-Use CMS</div>
+            <p class="text-background">Manage your content effortlessly with our user-friendly content management system.</p>
+        </div>
     </div>
-    <div class="overview-grid-cell">
-        <div id="lottie-animation3" class="lottie-container"></div>
-        <div class="sub-title">Full Ownership</div>
-        <p class="text-background">Enjoy complete ownership of your website's source code and design.</p>
-    </div>
-    <div class="overview-grid-cell">
-        <div id="lottie-animation2" class="lottie-container"></div>
-        <div class="sub-title">Easy-to-Use CMS</div>
-        <p class="text-background">Manage your content effortlessly with our user-friendly content management system.</p>
-    </div>
-</div>
 </section>
 <script>
     // Load the first animation
@@ -137,34 +138,35 @@
     });
 </script>
                     <div class="page-break"></div>
-                 
- <div class="overview">
- <section class="header-snapshot">
-        <h1>If you can think it, <br> I can build it.</h1>
+                <section class="snapshot">
+    <div class="content-background">
+        <div class="section-title">
+            <h1>If you can think it,
+                <br>
+                    I can build it.</h1>
+            </div>
+            <div class="grid-three-col">
+                <div class="service-box">
+                    <h2>New Sites.</h2>
+                    <p class="p-center">Build Webflow pages or sites from your designs on Figma and more.</p>
+                </div>
+                <div class="service-box">
+                    <h2>Convert.</h2>
+                    <p class="p-center">Get your existing site on Webflow. Go from Static to Dynamic.</p>
+                </div>
+                <div class="service-box">
+                    <h2>Emulate.</h2>
+                    <p class="p-center">Get that template you like built in Webflow.</p>
+                </div>
+            </div>
+            <div class="revisions-section">
+                <div class="revisions-banner">
+                    <h2>Unlimited Revisions</h2>
+                    <p>Get exactly what you want, not close enough.</p>
+                </div>
+            </div>
+        </div>
     </section>
-
-    <div class="services-snapshot">
-        <div class="service-box">
-            <h2>New Sites.</h2>
-            <p class="p-center">Build Webflow pages or sites from your designs on Figma and more.</p>
-        </div>
-        <div class="service-box">
-            <h2>Convert.</h2>
-            <p class="p-center">Get your existing site on Webflow. Go from Static to Dynamic.</p>
-        </div>
-        <div class="service-box">
-            <h2>Emulate.</h2>
-            <p class="p-center">Get that template you like built in Webflow.</p>
-        </div>
-    </div>
-
-    <section class="revisions-section">
-        <div class="revisions-banner">
-            <h2>Unlimited Revisions</h2>
-            <p>Get exactly what you want, not close enough.</p>
-        </div>
-    </section>
-    </div>
                     <div class="page-break"></div>
                 <section class="service-philosophy">
     <div class="content-container">
