--- a/public/index.html
+++ b/public/index.html
@@ -141,9 +141,9 @@
                 <section class="snapshot">
     <div class="content-background">
         <div class="section-title">
-            <h1>If you can think it,
+            <h2>If you can think it,
                 <br>
-                    I can build it.</h1>
+                    I can build it.</h2>
             </div>
             <div class="grid-three-col">
                 <div class="service-box">
@@ -169,7 +169,7 @@
     </section>
                     <div class="page-break"></div>
                 <section class="service-philosophy">
-    <div class="content-container">
+    <div class="content-background">
         <div class="section-title">
             <h2>Service Philosophy</h2>
         </div>
@@ -184,7 +184,7 @@
         </section>
                     <div class="page-break"></div>
                 <section class="features-section">
-    <div class="overview">
+    <div class="content-background">
         <div class="section-title">
             <h2>Features</h2>
         </div>
@@ -224,7 +224,7 @@
 </section>
                     <div class="page-break"></div>
                 <section class="how-it-works-section">
-    <div class="overview">
+    <div class="content-background">
         <div class="section-title">
     <h2>How it works</h2>
     </div>
@@ -302,7 +302,8 @@
                                     </section>
                     <div class="page-break"></div>
                 <section class="price-section">
-    <div class="overview">
+    <div class="content-background">
+        <div class="section-title"><h2>Pricing</h2></div>
     <div class="price-grid">
         <div class="package-cell">
             <div class="price-title">Classic Website Package</div>
